# lodestone

./: .env.example  .gitignore  Makefile  README.md  STUDY_GUIDE.html  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
evals/: __init__.py  ablation.py  aggregate.py  harness.py  metrics.py  runner.py  stats.py
evals/reports/: ABLATION.md  RESULTS.md  ablation.csv  results.json
scripts/: build_dataset.py
src/lodestone/: __init__.py  cli.py  config.py  data.py  engine.py  schemas.py
src/lodestone/api/: __init__.py  server.py
src/lodestone/chunking/: __init__.py  strategies.py
src/lodestone/generation/: __init__.py  claude.py  extractive.py  faithfulness.py
src/lodestone/retrieval/: __init__.py  base.py  bm25.py  dense.py  expansion.py  fusion.py  rerank.py  tokenize.py
tests/: __init__.py  conftest.py  test_bm25.py  test_chunking.py  test_data.py  test_dense_fusion.py  test_expansion_rerank.py  test_generation.py  test_metrics.py  test_tokenize.py
